// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
  id={null}
  rows={null}
>
  <input
    className="Slider__SliderPiece-sc-1hp9era-0 lnogdg"
    disabled={false}
    id="default"
    max={20}
    min={1}
    onChange={[Function]}
    step={1}
    type="range"
    value={8}
  />
</section>
`;

exports[` 2`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-3 wHYQL"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 eFKeiu Form__GroupTitle-v2wrel-2 dgUYZh"
        fontSize="0.75em"
        fontWeight={600}
        id={null}
        letterSpacing="0.4px"
      >
        Standard
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 lnogdg"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={1}
          />
        </section>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-3 wHYQL"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 eFKeiu Form__GroupTitle-v2wrel-2 dgUYZh"
        fontSize="0.75em"
        fontWeight={600}
        id={null}
        letterSpacing="0.4px"
      >
        Error
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 keKhPv"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={1}
          />
        </section>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-3 wHYQL"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 eFKeiu Form__GroupTitle-v2wrel-2 dgUYZh"
        fontSize="0.75em"
        fontWeight={600}
        id={null}
        letterSpacing="0.4px"
      >
        Disabled
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 lnogdg"
            disabled={true}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={1}
          />
        </section>
      </section>
    </section>
  </section>
</form>
`;

exports[` 3`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-3 wHYQL"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 eFKeiu Form__GroupTitle-v2wrel-2 dgUYZh"
        fontSize="0.75em"
        fontWeight={600}
        id={null}
        letterSpacing="0.4px"
      >
        Standard
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 lnogdg"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={10}
          />
        </section>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-3 wHYQL"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 eFKeiu Form__GroupTitle-v2wrel-2 dgUYZh"
        fontSize="0.75em"
        fontWeight={600}
        id={null}
        letterSpacing="0.4px"
      >
        With Label
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 jvANIo Slider__SliderLabel-sc-1hp9era-1 bMyAub"
            fontSize="0.879em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            1
          </label>
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 lnogdg"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={1}
          />
          <div
            className="Bar__BarLayout-icfo76-2 jGhkbe"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
                fontSize="0.879em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                1
              </label>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
                fontSize="0.879em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                20
              </label>
            </div>
          </div>
        </section>
      </section>
    </section>
    <section
      className="Form__Section-v2wrel-3 wHYQL"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 eFKeiu Form__GroupTitle-v2wrel-2 dgUYZh"
        fontSize="0.75em"
        fontWeight={600}
        id={null}
        letterSpacing="0.4px"
      >
        With Range
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 cngVTJ"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kTWmUL"
          id={null}
          rows={null}
        >
          <input
            className="Slider__SliderPiece-sc-1hp9era-0 lnogdg"
            disabled={false}
            id={null}
            max={20}
            min={1}
            onChange={[Function]}
            step={1}
            type="range"
            value={15}
          />
          <div
            className="Bar__BarLayout-icfo76-2 jGhkbe"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
                fontSize="0.879em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                1
              </label>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
                fontSize="0.879em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0.4px"
              >
                20
              </label>
            </div>
          </div>
        </section>
      </section>
    </section>
  </section>
</form>
`;
